--- a/first-prototype/style.css
+++ b/first-prototype/style.css
@@ -6,7 +6,7 @@
     padding: 0;
 }
 
-body {
+.homepage {
     height: 100%;
     background-image: url("https://i.redd.it/wuyvcvvvm7i51.jpg");
     background-size: cover;
@@ -102,7 +102,7 @@ nav {
     background-color: rgba(252, 156, 5, 0.2);
 }
 
-.sgi:hover {
+.sgi:hover, sign-in-btn {
     font-weight: 700;
     background-color: rgba(252, 156, 5, 0.8);
 }
